--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,9 @@
 <head>
 <title>1st Webpage</title>
 </head>
-<link rel="stylesheet" href="Styles/style.css">
-
+<link rel="stylesheet" href="Styles/style.css" type="">
+ 
+     <!-- This is the Body Section      -->
 
 <body>
     <p>
@@ -15,6 +16,8 @@
     <span>
       Hello Dad
     </span>
+    <br>
+    <b><a href="git.html"target="_blank">Git / GitHub commands</a></b>
     <br>
     <b><a href="https://www.example.com">Example Page</a></b>
 
