edit git commands file

--- a/git.html
+++ b/git.html
@@ -45,4 +45,16 @@
                 <th>git remote -v</th>
                 <th>provides detail of target url</th>
             </tr>
+            <tr>
+                <th>git clone {url)</th>
+                <th>takes a copy from github and loads it on your pc .... NB puts the code in a folder</th>
+            </tr>
+            <tr>
+                <th>rm -rf .git</th>
+                <th>Trouble shooting - delete local git repository</th>
+            </tr>
+            <tr>
+                <th>git remote -v</th>
+                <th>Shows you the url of github if you are connected</th>
+            </tr>
     </body>
